--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -2,28 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "32768"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/git/FL_June/server/federated_aia_test\n"
+     ]
     }
    ],
    "source": [
     "import os\n",
-    "os.popen('git clone https://at102091:12345678@gitlab.aiacademy.tw/junew/federated_aia_test.git').read()"
+    "if os.getcwd().split('/')[-2:] == ['FL_June', 'server']:\n",
+    "    os.popen('git clone https://at102091:12345678@gitlab.aiacademy.tw/junew/federated_aia_test.git').read()\n",
+    "    print('clone to ',os.getcwd())\n",
+    "else:\n",
+    "    print(os.getcwd())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
-    "from federated_aia_test.utils import compressed_cpickle, decompress_cpickle"
+    "from federated_aia_test.utils import compressed_cpickle, decompress_cpickleJune: "
    ]
   },
   {
@@ -47,14 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/git/FL_June/server/federated_aia_test\n"
+      "/home/jovyan/git/FL_June/server/federated_aia_test\n",
+      "Already up-to-date.\n",
+      "\n",
+      "['  origin/KJugrbO2x4I0JwkYIaLNFQ', '  origin/T_gHdTLAsBgPd-mt3Vx-3w']\n"
      ]
     }
    ],
@@ -63,19 +67,33 @@
     "    os.chdir('federated_aia_test')\n",
     "    print(os.getcwd())\n",
     "else:\n",
-    "    print(os.getcwd())"
+    "    print(os.getcwd())\n",
+    "    \n",
+    "r = os.popen('git pull').read()\n",
+    "print(r)\n",
+    "\n",
+    "os.popen('git remote update origin --prune')\n",
+    "lis = os.popen('git branch -r').read().split('\\n')[:-1]\n",
+    "\n",
+    "\n",
+    "all_client_branch = [i for i in  lis if not i.__contains__('master')]\n",
+    "\n",
+    "print(all_client_branch)\n",
+    "\n",
+    "if len(all_client_branch) <= 0:\n",
+    "    raise ValueError('June: No clients appear')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 建立新的初始化global model"
+    "## 建立新的初始化global model (如果不存在)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -142,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['  origin/QHkAXl3kpHN8FBJ2Xi_qZA', '  origin/Xlzc01o8h0_DP0-6UpKPOw']\n"
+      "['  origin/KJugrbO2x4I0JwkYIaLNFQ', '  origin/T_gHdTLAsBgPd-mt3Vx-3w']\n"
      ]
     }
    ],
@@ -165,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "origin/QHkAXl3kpHN8FBJ2Xi_qZA QHkAXl3kpHN8FBJ2Xi_qZA.pbz2\n",
+      "origin/KJugrbO2x4I0JwkYIaLNFQ KJugrbO2x4I0JwkYIaLNFQ.pbz2\n",
       "\n",
-      "origin/Xlzc01o8h0_DP0-6UpKPOw Xlzc01o8h0_DP0-6UpKPOw.pbz2\n",
+      "origin/T_gHdTLAsBgPd-mt3Vx-3w T_gHdTLAsBgPd-mt3Vx-3w.pbz2\n",
       "\n"
      ]
     }
@@ -197,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -206,8 +224,8 @@
      "text": [
       "* \u001b[32mmaster\u001b[m\n",
       "  \u001b[31mremotes/origin/HEAD\u001b[m -> origin/master\n",
-      "  \u001b[31mremotes/origin/QHkAXl3kpHN8FBJ2Xi_qZA\u001b[m\n",
-      "  \u001b[31mremotes/origin/Xlzc01o8h0_DP0-6UpKPOw\u001b[m\n",
+      "  \u001b[31mremotes/origin/KJugrbO2x4I0JwkYIaLNFQ\u001b[m\n",
+      "  \u001b[31mremotes/origin/T_gHdTLAsBgPd-mt3Vx-3w\u001b[m\n",
       "  \u001b[31mremotes/origin/master\u001b[m\n"
      ]
     }
@@ -225,14 +243,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Xlzc01o8h0_DP0-6UpKPOw.pbz2', 'QHkAXl3kpHN8FBJ2Xi_qZA.pbz2']\n"
+      "['KJugrbO2x4I0JwkYIaLNFQ.pbz2', 'T_gHdTLAsBgPd-mt3Vx-3w.pbz2']\n"
      ]
     }
    ],
@@ -247,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -308,8 +326,8 @@
      "text": [
       "* master\n",
       "  remotes/origin/HEAD -> origin/master\n",
-      "  remotes/origin/QHkAXl3kpHN8FBJ2Xi_qZA\n",
-      "  remotes/origin/Xlzc01o8h0_DP0-6UpKPOw\n",
+      "  remotes/origin/KJugrbO2x4I0JwkYIaLNFQ\n",
+      "  remotes/origin/T_gHdTLAsBgPd-mt3Vx-3w\n",
       "  remotes/origin/master\n",
       "\n"
      ]
