--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -24,18 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.models import Sequential, Model\n",
-    "from tensorflow.keras.layers import (Input, Dense, Dropout, Activation,\n",
-    "                                     BatchNormalization, Flatten,\n",
-    "                                     Conv2D, MaxPooling2D)\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
-    "from federated_aia_test.utils import compressed_cpickle, decompress_cpickleJune: "
+    "from federated_aia_test.utils import compressed_cpickle, decompress_cpickle"
    ]
   },
   {
@@ -97,6 +93,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tensorflow.keras.models import Sequential, Model\n",
+    "from tensorflow.keras.layers import (Input, Dense, Dropout, Activation,\n",
+    "                                     BatchNormalization, Flatten,\n",
+    "                                     Conv2D, MaxPooling2D)\n",
+    "\n",
     "def simplecnn():\n",
     "    # 選擇 Keras 的 API 寫法\n",
     "    inputs = Input(shape=(28,28,1))\n",
