--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/git/FL_June/server/federated_aia_test\n"
+      "clone to  /home/jovyan/git/FL_June/server\n"
      ]
     }
    ],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,31 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
-    "from federated_aia_test.utils import compressed_cpickle, decompress_cpickleJune: "
+    "from federated_aia_test.utils import compressed_cpickle, decompress_cpickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### control_key (optional)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contro_key = {}\n",
+    "contro_key['new_model'] = False # default to False\n"
    ]
   },
   {
@@ -43,57 +67,42 @@
    "metadata": {},
    "source": [
     "## 移動到federated_aia_test floder\n",
-    "如果不存在，請先執行setup.py建立環境"
+    "如果不存在，請先執行最上面的git clone"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/git/FL_June/server/federated_aia_test\n",
-      "Already up-to-date.\n",
-      "\n",
-      "['  origin/KJugrbO2x4I0JwkYIaLNFQ', '  origin/T_gHdTLAsBgPd-mt3Vx-3w']\n"
+      "/home/jovyan/git/FL_June/server\n"
      ]
     }
    ],
    "source": [
-    "if 'federated_aia_test' in os.listdir():\n",
-    "    os.chdir('federated_aia_test')\n",
-    "    print(os.getcwd())\n",
+    "print(os.getcwd())\n",
+    "if os.getcwd().split('/')[-2:] == ['server', 'federated_aia_test']:\n",
+    "    pass\n",
     "else:\n",
-    "    print(os.getcwd())\n",
-    "    \n",
-    "r = os.popen('git pull').read()\n",
-    "print(r)\n",
-    "\n",
-    "os.popen('git remote update origin --prune')\n",
-    "lis = os.popen('git branch -r').read().split('\\n')[:-1]\n",
-    "\n",
-    "\n",
-    "all_client_branch = [i for i in  lis if not i.__contains__('master')]\n",
-    "\n",
-    "print(all_client_branch)\n",
-    "\n",
-    "if len(all_client_branch) <= 0:\n",
-    "    raise ValueError('June: No clients appear')"
+    "    os.chdir('../../FL_June/server/federated_aia_test')\n",
+    "    os.getcwd()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 建立新的初始化global model (如果不存在)"
+    "## 建立新的初始化global model \n",
+    "> 只有當模型不存在、或者你更新了架構、打算重新訓練的時候"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,28 +136,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'new_model': True}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contro_key['new_model'] = True\n",
+    "contro_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "global model already exist\n"
+      "2021-11-27\n"
      ]
     }
    ],
    "source": [
-    "if 'global_model.pbz2' not in os.listdir():\n",
+    "\n",
+    "\n",
+    "today = date.today()\n",
+    "print(today)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'global_model_3_2021-11-27'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "lis = os.listdir('../saved_model')\n",
+    "lis = [i for i in lis if i.__contains__('global_model')]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Move global model to FL_June/server/saved_model\n",
+      "update gitrepo global_model.pbz2\n"
+     ]
+    }
+   ],
+   "source": [
+    "if contro_key['new_model'] == True:\n",
+    "    import os\n",
+    "    import shutil\n",
+    "    from datetime import date\n",
+    "    \n",
+    "    # 保留舊模型到server本機 (saved_model被登錄在.gitignore)\n",
+    "    os.makedirs('../saved_model', exist_ok=True)\n",
+    "    if os.listdir().__contains__('global_model.pbz2'):\n",
+    "        today = date.today()\n",
+    "        lis = os.listdir('../saved_model')\n",
+    "        lis = [i for i in lis if i.__contains__('global_model')]\n",
+    "        \n",
+    "        new_model_name = 'global_model_{ver}_{today}.pbz2'.format(today=today, ver=len(lis))\n",
+    "        shutil.move('./global_model.pbz2', '../saved_model/'+new_model_name)\n",
+    "        print('Move global model to FL_June/server/saved_model')\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
     "    model = simplecnn()\n",
     "\n",
     "    # weight、架構 (json) to pickle\n",
     "\n",
     "    model_attri = {'weights':model.get_weights(), 'json':model.to_json()}\n",
+    "    \n",
     "\n",
-    "    compressed_cpickle('./federated_aia_test/global_model', model_attri)\n",
-    "else:\n",
-    "    print('global model already exist')"
+    "    compressed_cpickle('./global_model', model_attri)\n",
+    "\n",
+    "    print('update gitrepo global_model.pbz2')\n",
+    "    run_cmd = lambda cmd_lis:[os.popen(i).read() for i in cmd_lis.split('\\n')]\n",
+    "    cmd_lis = '''git add .\n",
+    "    git commit -m'global model complete aggregate and update to g'\n",
+    "    git push https://at102091:12345678@gitlab.aiacademy.tw/junew/federated_aia_test.git\n",
+    "    '''\n",
+    "    run_cmd(cmd_lis)\n"
    ]
   },
   {
@@ -172,13 +271,20 @@
     }
    ],
    "source": [
+    "r = os.popen('git pull').read()\n",
+    "print(r)\n",
+    "\n",
     "os.popen('git remote update origin --prune')\n",
     "lis = os.popen('git branch -r').read().split('\\n')[:-1]\n",
     "\n",
     "\n",
     "all_client_branch = [i for i in  lis if not i.__contains__('master')]\n",
     "\n",
-    "print(all_client_branch)\n"
+    "print(all_client_branch)\n",
+    "\n",
+    "# 判斷各個分支是否有更新\n",
+    "if len(all_client_branch) <= 0:\n",
+    "    raise ValueError('June: No clients appear')"
    ]
   },
   {
