update save model system

--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -231,14 +231,13 @@
     "        print('Move global model to FL_June/server/saved_model')\n",
     "    else:\n",
     "        pass\n",
-    "    \n",
     "    model = simplecnn()\n",
     "\n",
     "    # weight、架構 (json) to pickle\n",
     "\n",
     "    model_attri = {'weights':model.get_weights(), 'json':model.to_json()}\n",
     "    \n",
-    "\n",
+    "    print('create new model')\n",
     "    compressed_cpickle('./global_model', model_attri)\n",
     "\n",
     "    print('update gitrepo global_model.pbz2')\n",
