Add custom option for git

--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -4,6 +4,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@param {type:\"boolean\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gitURL = 'https://gitlab.aiacademy.tw/junew/federated_aia_test.git'\n",
+    "account = 'at102091:12345678'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -16,7 +35,8 @@
    "source": [
     "import os\n",
     "if os.getcwd().split('/')[-2:] == ['FL_June', 'server']:\n",
-    "    os.popen('git clone https://at102091:12345678@gitlab.aiacademy.tw/junew/federated_aia_test.git').read()\n",
+    "    os.popen('git clone https://{account}@{gitURL}'.format(account=account,\n",
+    "                                                           gitURL=gitURL.split('//')[-1])).read()\n",
     "    print('clone to ',os.getcwd())\n",
     "else:\n",
     "    print(os.getcwd())"
@@ -244,8 +264,10 @@
     "    run_cmd = lambda cmd_lis:[os.popen(i).read() for i in cmd_lis.split('\\n')]\n",
     "    cmd_lis = '''git add .\n",
     "    git commit -m'global model complete aggregate and update to g'\n",
-    "    git push https://at102091:12345678@gitlab.aiacademy.tw/junew/federated_aia_test.git\n",
-    "    '''\n",
+    "    git push https://{account}@{gitURL}\n",
+    "    '''.format(account=account, gitURL=gitURL.split('//')[-1])\n",
+    "    \n",
+    "    \n",
     "    run_cmd(cmd_lis)\n"
    ]
   },
@@ -447,20 +469,15 @@
     "rm *.pbz2\n",
     "mv ../global_model.pbz2 ./\n",
     "git add .\n",
-    "git commit -m'global model complete aggregate and update to g'\n",
-    "git push https://at102091:12345678@gitlab.aiacademy.tw/junew/federated_aia_test.git\n",
-    "'''\n",
+    "git commit -m'global model complete aggregate and update to Gmodel'\n",
+    "git push https://{account}@{gitURL}\n",
+    "'''.format(account=account, gitURL=gitURL.split('//')[-1])\n",
+    "\n",
+    "\n",
     "run_cmd(cmd_lis)\n",
     "branch = os.popen('git branch -a').read()\n",
-    "print(branch)\n"
+    "print(branch)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
