--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,30 +12,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "clone to  /home/jovyan/git/FL_June/server\n"
+      "gitlab.aiacademy.tw/junew/federated_aia_test.git cloning to  /home/jovyan/git/FL_June/server\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "if os.getcwd().split('/')[-2:] == ['FL_June', 'server']:\n",
-    "    os.popen('git clone https://{account}@{gitURL}'.format(account=account,\n",
+    "    os.popen('git clone -b master https://{account}@{gitURL}'.format(account=account,\n",
     "                                                           gitURL=gitURL.split('//')[-1])).read()\n",
-    "    print('clone to ',os.getcwd())\n",
+    "\n",
+    "    print(gitURL.split('//')[-1], 'cloning to ',os.getcwd())\n",
     "else:\n",
     "    print(os.getcwd())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,13 +51,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,14 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/git/FL_June/server\n"
+      "/home/jovyan/git/FL_June/server\n",
+      "/home/jovyan/git/FL_June/server/federated_aia_test\n"
      ]
     }
    ],
@@ -100,7 +95,8 @@
     "    pass\n",
     "else:\n",
     "    os.chdir('../../FL_June/server/federated_aia_test')\n",
-    "    os.getcwd()"
+    "    os.getcwd()\n",
+    "print(os.getcwd())"
    ]
   },
   {
@@ -113,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,83 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'new_model': True}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "contro_key['new_model'] = True\n",
-    "contro_key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-11-27\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "today = date.today()\n",
-    "print(today)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'global_model_3_2021-11-27'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from datetime import date\n",
-    "\n",
-    "lis = os.listdir('../saved_model')\n",
-    "lis = [i for i in lis if i.__contains__('global_model')]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Move global model to FL_June/server/saved_model\n",
-      "update gitrepo global_model.pbz2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if contro_key['new_model'] == True:\n",
     "    import os\n",
@@ -266,19 +188,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 下載各個branch中的模型壓縮檔"
+    "## 選擇本輪參與的參與者，並更新round和training.cfg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contro_key['C'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['  origin/KJugrbO2x4I0JwkYIaLNFQ', '  origin/T_gHdTLAsBgPd-mt3Vx-3w']\n"
+      "Already up-to-date.\n",
+      "\n",
+      "['KJugrbO2x4I0JwkYIaLNFQ', 'S_I7VIt4yMEZLQXNw5RXzA', 'T_gHdTLAsBgPd-mt3Vx-3w']\n",
+      "['T_gHdTLAsBgPd-mt3Vx-3w', 'KJugrbO2x4I0JwkYIaLNFQ', 'S_I7VIt4yMEZLQXNw5RXzA']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "C = contro_key['C']\n",
+    "\n",
+    "r = os.popen('git pull').read()\n",
+    "print(r)\n",
+    "\n",
+    "os.popen('git remote update origin --prune')\n",
+    "lis = os.popen('git branch -r').read().split('\\n')[:-1]\n",
+    "\n",
+    "\n",
+    "all_client_branch = [i.strip().split('/')[-1] for i in lis if not i.__contains__('master')]\n",
+    "\n",
+    "print(all_client_branch)\n",
+    "\n",
+    "participate_branch = random.sample(all_client_branch, int(C*len(all_client_branch)))\n",
+    "print(participate_branch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'round': '2',\n",
+       " 'trainKey': 'KJugrbO2x4I0JwkYIaLNFQ/S_I7VIt4yMEZLQXNw5RXzA/T_gHdTLAsBgPd-mt3Vx-3w'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('./training.cfg', mode='r', encoding='UTF-8') as f:\n",
+    "    r = f.readlines()\n",
+    "    item_dict = {}\n",
+    "    for item in r:\n",
+    "        key, value = item.split('=')\n",
+    "        item_dict[key] = value.split('\\n')[0]\n",
+    "\n",
+    "item_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "['T_gHdTLAsBgPd-mt3Vx-3w', 'KJugrbO2x4I0JwkYIaLNFQ', 'S_I7VIt4yMEZLQXNw5RXzA']\n"
+     ]
+    }
+   ],
+   "source": [
+    "rounds = int(item_dict['round'])+1\n",
+    "print(rounds)\n",
+    "print(participate_branch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./training.cfg', mode='w+', encoding='UTF-8') as f:\n",
+    "    f.writelines('round={rounds}\\n'.format(rounds=rounds))\n",
+    "    f.writelines('trainKey={participate_branch}\\n'.format(participate_branch='/'.join(all_client_branch)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 下載各個branch中的模型壓縮檔"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up-to-date.\n",
+      "\n",
+      "['  origin/KJugrbO2x4I0JwkYIaLNFQ', '  origin/S_I7VIt4yMEZLQXNw5RXzA', '  origin/T_gHdTLAsBgPd-mt3Vx-3w']\n"
      ]
     }
    ],
@@ -301,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -309,6 +343,8 @@
      "output_type": "stream",
      "text": [
       "origin/KJugrbO2x4I0JwkYIaLNFQ KJugrbO2x4I0JwkYIaLNFQ.pbz2\n",
+      "\n",
+      "origin/S_I7VIt4yMEZLQXNw5RXzA S_I7VIt4yMEZLQXNw5RXzA.pbz2\n",
       "\n",
       "origin/T_gHdTLAsBgPd-mt3Vx-3w T_gHdTLAsBgPd-mt3Vx-3w.pbz2\n",
       "\n"
@@ -333,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -343,6 +379,7 @@
       "* \u001b[32mmaster\u001b[m\n",
       "  \u001b[31mremotes/origin/HEAD\u001b[m -> origin/master\n",
       "  \u001b[31mremotes/origin/KJugrbO2x4I0JwkYIaLNFQ\u001b[m\n",
+      "  \u001b[31mremotes/origin/S_I7VIt4yMEZLQXNw5RXzA\u001b[m\n",
       "  \u001b[31mremotes/origin/T_gHdTLAsBgPd-mt3Vx-3w\u001b[m\n",
       "  \u001b[31mremotes/origin/master\u001b[m\n"
      ]
@@ -361,14 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['KJugrbO2x4I0JwkYIaLNFQ.pbz2', 'T_gHdTLAsBgPd-mt3Vx-3w.pbz2']\n"
+      "['KJugrbO2x4I0JwkYIaLNFQ.pbz2', 'T_gHdTLAsBgPd-mt3Vx-3w.pbz2', 'S_I7VIt4yMEZLQXNw5RXzA.pbz2']\n"
      ]
     }
    ],
@@ -383,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 10)\n"
+      "(3, 10)\n"
      ]
     }
    ],
@@ -404,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,16 +472,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "On branch master\n",
+      "Your branch is ahead of 'origin/master' by 1 commit.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "nothing to commit, working directory clean\n",
+      "\n",
+      "\n",
+      "\n",
       "* master\n",
       "  remotes/origin/HEAD -> origin/master\n",
       "  remotes/origin/KJugrbO2x4I0JwkYIaLNFQ\n",
+      "  remotes/origin/S_I7VIt4yMEZLQXNw5RXzA\n",
       "  remotes/origin/T_gHdTLAsBgPd-mt3Vx-3w\n",
       "  remotes/origin/master\n",
       "\n"
@@ -465,10 +514,19 @@
     "'''.format(account=account, gitURL=gitURL.split('//')[-1])\n",
     "\n",
     "\n",
-    "run_cmd(cmd_lis)\n",
+    "result = run_cmd(cmd_lis)\n",
+    "for i in result:\n",
+    "    print(i)\n",
     "branch = os.popen('git branch -a').read()\n",
     "print(branch)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
