--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
       "Already up-to-date.\n",
       "\n",
       "['KJugrbO2x4I0JwkYIaLNFQ', 'S_I7VIt4yMEZLQXNw5RXzA', 'T_gHdTLAsBgPd-mt3Vx-3w']\n",
-      "['T_gHdTLAsBgPd-mt3Vx-3w', 'KJugrbO2x4I0JwkYIaLNFQ', 'S_I7VIt4yMEZLQXNw5RXzA']\n"
+      "['KJugrbO2x4I0JwkYIaLNFQ', 'T_gHdTLAsBgPd-mt3Vx-3w', 'S_I7VIt4yMEZLQXNw5RXzA']\n"
      ]
     }
    ],
@@ -237,17 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'round': '2',\n",
-       " 'trainKey': 'KJugrbO2x4I0JwkYIaLNFQ/S_I7VIt4yMEZLQXNw5RXzA/T_gHdTLAsBgPd-mt3Vx-3w'}"
+       "{'round': '0', 'trainKey': 'abc/fdg/fgg'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,15 +264,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "['T_gHdTLAsBgPd-mt3Vx-3w', 'KJugrbO2x4I0JwkYIaLNFQ', 'S_I7VIt4yMEZLQXNw5RXzA']\n"
+      "1\n",
+      "['KJugrbO2x4I0JwkYIaLNFQ', 'T_gHdTLAsBgPd-mt3Vx-3w', 'S_I7VIt4yMEZLQXNw5RXzA']\n"
      ]
     }
    ],
@@ -285,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,28 +367,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* \u001b[32mmaster\u001b[m\n",
-      "  \u001b[31mremotes/origin/HEAD\u001b[m -> origin/master\n",
-      "  \u001b[31mremotes/origin/KJugrbO2x4I0JwkYIaLNFQ\u001b[m\n",
-      "  \u001b[31mremotes/origin/S_I7VIt4yMEZLQXNw5RXzA\u001b[m\n",
-      "  \u001b[31mremotes/origin/T_gHdTLAsBgPd-mt3Vx-3w\u001b[m\n",
-      "  \u001b[31mremotes/origin/master\u001b[m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git branch -a"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -398,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -483,10 +460,8 @@
       "\n",
       "\n",
       "\n",
-      "On branch master\n",
-      "Your branch is ahead of 'origin/master' by 1 commit.\n",
-      "  (use \"git push\" to publish your local commits)\n",
-      "nothing to commit, working directory clean\n",
+      "[master e82a51e] global model complete aggregate and update to Gmodel\n",
+      " 1 file changed, 2 insertions(+), 2 deletions(-)\n",
       "\n",
       "\n",
       "\n",
@@ -519,6 +494,28 @@
     "    print(i)\n",
     "branch = os.popen('git branch -a').read()\n",
     "print(branch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZMQInteractiveShell\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython import get_ipython\n",
+    "import os\n",
+    "\n",
+    "print(get_ipython().__class__.__name__)\n",
+    "if get_ipython().__class__.__name__ == 'ZMQInteractiveShell':\n",
+    "    os.popen('ipython nbconvert --to script ../server.ipynb')"
    ]
   },
   {
