update argparser for server.py

--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -51,6 +51,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython import get_ipython\n",
+    "import os\n",
+    "import argparse\n",
+    "\n",
+    "print(get_ipython().__class__.__name__)\n",
+    "if get_ipython().__class__.__name__ == 'ZMQInteractiveShell':\n",
+    "    pass\n",
+    "else:\n",
+    "    parser = argparse.ArgumentParser()\n",
+    "    parser.add_argument(\"--new_model\", help=\"if initialize a new model or not, [default]:False\",\n",
+    "                       default = False, required=False)\n",
+    "    args = parser.parse_args()\n",
+    "    print(vars(args))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting 123.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile 123.py\n",
+    "import argparse\n",
+    "parser = argparse.ArgumentParser()\n",
+    "parser.add_argument(\"--new_model\", help=\"if initialize a new model or not, [default]:False\",\n",
+    "                   default = False, required=False)\n",
+    "args = parser.parse_args()\n",
+    "print(vars(args))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'new_model': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python 123.py"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,12 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "contro_key = {}\n",
-    "contro_key['new_model'] = False # default to False\n"
+    "if 'args' in locals():\n",
+    "    for i in vars(args).keys():\n",
+    "        contro_key[i] = vars(args)[i]\n",
+    "else:\n",
+    "    pass\n"
    ]
   },
   {
@@ -105,6 +170,16 @@
    "source": [
     "## 建立新的初始化global model \n",
     "> 只有當模型不存在、或者你更新了架構、打算重新訓練的時候"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \n",
+    "contro_key['new_model'] = False\n"
    ]
   },
   {
